--- a/home.html
+++ b/home.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="home.html">Home</a> |
+    <a href="about.html">About</a>
+    <hr>
     <h2>Welcome to Home Page..</h2>
     <hr>
 </body>
