add some services Token no E203

--- a/services.html
+++ b/services.html
@@ -9,5 +9,11 @@
 <body>
     <h2>Welcome to Services  Page...</h2>
     <hr>
-</body>
+    <ul>Complete Solutions for ERP.</ul>
+      <li>Software Products.</li>
+       <li> Software Development & Maintenance.</li>
+        <li>IT Education.</li>
+
+</ul>
+    </body>
 </html>
