--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Welcome to Product Us Page...</h2>
+    <h2>Welcome to Product Us Page.....</h2>
     <hr>
 </body>
 </html>
