New Service Added

--- a/services.html
+++ b/services.html
@@ -13,6 +13,7 @@
       <li>Software Products.</li>
        <li> Software Development & Maintenance.</li>
         <li>IT Education.</li>
+        <li>Internships</li>
 
 </ul>
     </body>
